<resources>
    <string name="app_name">Shreya Teams</string>
    <string name="title_setting">Settings</string>
    <string name="title_category">Schedule</string>
    <string name="title_trending">History</string>
    <string name="title_home">Home</string>

    <string name="name">name</string>
    <string name="emailid">shreyateam@gmail.com</string>
    <string name="title_about_theme">Dark Theme</string>


    <string name="title_about_info">About</string>
    <string name="sub_title_about_theme">Good for eyesight and battery life</string>




    <string name="title_about_notification">Turn Off Notification</string>
    <string name="sub_title_about_notification">You may miss important alerts and update.</string>
    <!--network message-->
    <string name="offline">You\'re offline</string>
    <string name="msg_no_network">Oops, there is something problem with your network or the server is currently down, please try it again later.</string>
    <string name="privacy_policy">Privacy_policy</string>
    <string name="terms_policy"><![CDATA[App Terms & Policies]]></string>




    <string name="share">Share</string>
    <string name="sharewith">Share with friends and family.</string>
    <string name="sentiment">SENTIMENT ANALYSIS OF MEET RECORDING</string>
    <string name="sentisub">Get insights about what attendees felt during the Meet!</string>
    <string name="chatroom">CHAT WITH PEERS(Permanent Chat)</string>
    <string name="chatsub">Click to have great conversations with your peers!</string>
    <string name="title_about">About</string>

    <string name="new_meeting">New Meeting</string>
    <string name="schedule_meeting">Schedule </string>
    <string name="join_meeting">Join Meeting</string>
    <string name="start_txt">Copy this to invite other</string>
    <string name="dialog_subtitle">Copy and share this link with people that you want to meet with.</string>
    <string name="meeting_id">1234567890</string>
    <string name="dialog_meeting_link">https://meet.jit.si/test123</string>
    <string name="meeting_heading_txt">Meeting Info</string>
    <string name="metting_title">Enter Meeting title</string>
    <string name="title_video_on">Video On</string>
    <string name="join_meeting_heading_txt">Join Meeting</string>
    <string name="metting_code">Enter Meeting Code</string>
    <string name="meetingHistory">MeetingHistory</string>
    <string name="No_Data_Found">No Data Found!</string>
    <string name="no_history">You have not attended any meeting</string>
    <string name="app_about">Instant video conference with your family,friends and colleagues</string>

    <string name="recent_posts">Recent Meetings</string>
    <string name="view_all">View All</string>

<!--    dynamic link info-->
    <string name="app_dynamic_link_url_prefix">https://shreyateam.page.link</string>
    <string name="app_deep_link_url">https://shreyateam.page.link/?meetingCode=</string>
    <string name="app_deep_link_domain">shreyateam.page.link</string>


<!--    admob info-->
    <string name="admob__appid">ca-app-pub-9481212869824035~1492155190</string>
    <string name="banner_adunit">ca-app-pub-9481212869824035/3318396270</string>
    <string name="inter_adunit">ca-app-pub-9481212869824035/2005314601</string>
<!--    ads enabled/disabled-->
    <string name="isAdsEnabled">false</string>

    <string name="dropbox_app_key">qk2x6nt19ify80g</string>
</resources>