<?xml version="1.0" encoding="utf-8"?>
<!--design for include_about-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/btn_switch_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mrl_rippleAlpha="0.2"
            app:mrl_rippleColor="@color/colorRipple"
            app:mrl_rippleHover="true"
            app:mrl_rippleOverlay="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_baseline_settings_24" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_about_theme"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sub_title_about_theme" />

                </LinearLayout>

            </LinearLayout>

        </com.balysv.materialripple.MaterialRippleLayout>

        <Switch
            android:id="@+id/switch_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="16dp" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/btn_switch_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mrl_rippleAlpha="0.2"
            app:mrl_rippleColor="@color/colorRipple"
            app:mrl_rippleHover="true"
            app:mrl_rippleOverlay="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_baseline_notifications_24" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_about_notification"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                        android:textSize="16sp" />

                    <TextView
                        android:padding="5sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sub_title_about_notification" />

                </LinearLayout>

            </LinearLayout>

        </com.balysv.materialripple.MaterialRippleLayout>

        <Switch
            android:id="@+id/switch_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="16dp" />

    </RelativeLayout>



    <com.balysv.materialripple.MaterialRippleLayout
        android:id="@+id/btn_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mrl_rippleAlpha="0.2"
        app:mrl_rippleColor="@color/colorRipple"
        app:mrl_rippleHover="true"
        app:mrl_rippleOverlay="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_about_more" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sharewith" />

            </LinearLayout>

        </LinearLayout>

    </com.balysv.materialripple.MaterialRippleLayout>


    <com.balysv.materialripple.MaterialRippleLayout
        android:id="@+id/sentiment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mrl_rippleAlpha="0.2"
        app:mrl_rippleColor="@color/colorRipple"
        app:mrl_rippleHover="true"
        app:mrl_rippleOverlay="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:layout_width="21dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/sentiment" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sentiment"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sentisub" />

            </LinearLayout>

        </LinearLayout>

    </com.balysv.materialripple.MaterialRippleLayout>

    <com.balysv.materialripple.MaterialRippleLayout
        android:id="@+id/chatroom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mrl_rippleAlpha="0.2"
        app:mrl_rippleColor="@color/colorRipple"
        app:mrl_rippleHover="true"
        app:mrl_rippleOverlay="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="11dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/chatroom" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chatroom"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chatsub" />

            </LinearLayout>

        </LinearLayout>

    </com.balysv.materialripple.MaterialRippleLayout>

</LinearLayout>

