<?xml version="1.0" encoding="utf-8"?>
<!--design for join_meeting_dialog-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:background="@android:color/transparent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_margin="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:padding="5dp"
            android:textStyle="normal"
            android:textSize="15sp"
            android:text="@string/join_meeting_heading_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
            <EditText
                android:layout_margin="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:padding="5dp"
                android:id="@+id/join_meeting_code"
                android:hint="@string/metting_code"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_centerVertical="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"

                        >

                    <ImageView

                        android:layout_margin="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_baseline_videocam_24"
                        android:layout_marginTop="8dp"
                        android:padding="4dp"/>
                    <TextView
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_video_on"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                        android:textSize="18sp" />


                    </LinearLayout>
                <Switch
                    android:layout_gravity="center"
                    android:id="@+id/switch_video_join"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="16dp" />

            </RelativeLayout>
            <Button
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:padding="3dp"
                android:layout_margin="5dp"
                android:background="@drawable/background_btn"
                android:id="@+id/join_now_btn"
                android:textSize="15sp"
                android:text="Join Now"
                android:layout_width="120dp"
                android:layout_height="40dp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
