<?xml version="1.0" encoding="utf-8"?>
<!--design for fragment_home-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView

        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:background="#fefefe"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/relative_main"
                android:layout_width="match_parent"
                android:background="@color/colorPrimary"
                android:layout_height="300dp">
            </RelativeLayout>

            <ImageView

                android:id="@+id/oval"
                android:layout_marginTop="250dp"
                android:background="@drawable/oval"
                android:layout_width="match_parent"
                android:layout_height="100dp" />


            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/gifImageView"
                android:layout_width="155dp"
                android:layout_height="148dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:src="@drawable/orangelogo"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/logo"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center"
                android:padding="5dp"

                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />
            <LinearLayout
                android:background="@color/layout"
                android:layout_marginTop="180dp"
                android:id="@+id/card_layout"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:elevation="5dp"
                >

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_1"
                    android:layout_margin="5dp"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="10dp"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content">
                    <com.balysv.materialripple.MaterialRippleLayout
                        android:id="@+id/new_meeting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:padding="10dp"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">


                            <ImageView
                                android:layout_gravity="center"
                                android:layout_width="@dimen/image_width"
                                android:layout_height="@dimen/image_height"
                                android:elevation="5dp"
                                android:padding="5dp"
                                android:src="@drawable/newmeeting" />

                            <View
                                android:background="@color/gray"
                                android:layout_width="match_parent"
                                android:layout_height="1dp"/>
                            <TextView
                                android:textAllCaps="true"
                                android:gravity="center"
                                android:padding="5dp"
                                android:layout_gravity="center"
                                android:textSize="18sp"
                               android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                                android:text="@string/new_meeting"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>
                    </com.balysv.materialripple.MaterialRippleLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_2"
                    android:layout_margin="5dp"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="10dp"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content">
                    <com.balysv.materialripple.MaterialRippleLayout
                        android:id="@+id/join_meeting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout

                            android:padding="10dp"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:layout_gravity="center"
                                android:id="@+id/user_profile_photo1"
                                android:layout_width="@dimen/image_width"
                                android:layout_height="@dimen/image_height"
                                android:elevation="5dp"
                                android:padding="5dp"
                                android:src="@drawable/joinmeeting" />

                            <View
                                android:background="@color/gray"
                                android:layout_width="match_parent"
                                android:layout_height="1dp"/>
                            <TextView
                                android:textAllCaps="true"
                                android:gravity="center"
                                android:padding="5dp"
                                android:layout_gravity="center"
                                android:textSize="18sp"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                                android:text="@string/join_meeting"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>
                    </com.balysv.materialripple.MaterialRippleLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <com.google.android.gms.ads.AdView
                android:layout_marginTop="5dp"
                android:layout_below="@+id/card_layout"
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                ads:adSize="SMART_BANNER"
                ads:adUnitId="@string/banner_adunit">
            </com.google.android.gms.ads.AdView>
            <include
                android:layout_marginTop="@dimen/margin_10dp"
                android:layout_below="@+id/adView"
                layout="@layout/recent_call_recycler_view"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" />


        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>